--- a/src/home-five.html
+++ b/src/home-five.html
@@ -105,6 +105,7 @@
                                                     <li><a class="nav-item" href="team.html">Team</a></li>
                                                     <li><a class="nav-item" href="contact.html">Contact</a></li>
                                                     <li><a class="nav-item" href="contact-v2.html">Contact v2</a></li>
+                                                    <li><a class="nav-item" href="changelog.html">Changelog</a></li>
                                                 </ul>
                                             </div>
                                             <div>
@@ -157,19 +158,19 @@
                                 </li>
                             </ul>
                             <div class="menu-bottom">
-                                <a href="#" class="btn bg-green btn-md rounded-2 px-4">Register</a>
+                                <a href="register.html" class="btn bg-green btn-md rounded-2 px-4">Register</a>
                             </div>
                         </div>
                         
-                        <div class="d-flex items-center gap-3 font-sora">
+                        <div class="d-flex align-items-center gap-3 font-sora">
                             <button aria-label="search" class="btn btn-outline text-gray-700 p-0">
                                 <svg viewBox="0 0 24 24" width="24" height="24" stroke="currentColor" stroke-width="2" fill="none" stroke-linecap="round" stroke-linejoin="round" class="text-gray-900"><circle cx="11" cy="11" r="8"></circle><line x1="21" y1="21" x2="16.65" y2="16.65"></line></svg>
                             </button>
-                            <button aria-label="cart" class="btn btn-outline text-gray-700 p-0 position-relative">
+                            <a href="cart.html" aria-label="cart" class="btn btn-outline text-gray-700 p-0 position-relative">
                                 <svg viewBox="0 0 24 24" width="24" height="24" stroke="currentColor" stroke-width="2" fill="none" stroke-linecap="round" stroke-linejoin="round" class="text-gray-900"><path d="M6 2L3 6v14a2 2 0 0 0 2 2h14a2 2 0 0 0 2-2V6l-3-4z"></path><line x1="3" y1="6" x2="21" y2="6"></line><path d="M16 10a4 4 0 0 1-8 0"></path></svg>
                                 <span class="cart-badge bg-green text-white">2</span>
-                            </button>
-                            <a href="#" class="btn bg-green text-white fw-500 btn-md rounded-2 px-4 ms-2 d-none d-md-flex">Register</a>
+                            </a>
+                            <a href="register.html" class="btn bg-green text-white fw-500 btn-md rounded-2 px-4 ms-2 d-none d-md-flex">Register</a>
                             <button aria-label="menu" class="mobile-menu-trigger btn btn-outline px-0 text-gray-700 d-flex d-lg-none">
                                 <svg viewBox="0 0 24 24" width="24" height="24" stroke="currentColor" stroke-width="2" fill="none" stroke-linecap="round" stroke-linejoin="round" class="text-gray-900"><line x1="3" y1="12" x2="21" y2="12"></line><line x1="3" y1="6" x2="21" y2="6"></line><line x1="3" y1="18" x2="21" y2="18"></line></svg>
                             </button>
@@ -189,11 +190,11 @@
                             <h1 class="text-white display6-size fw-500 lh-1" data-aos="fade-up" data-aos-duration="400" data-delay="200">Ready to transform your financial life</h1>
                             <p class="fw-400 text-gray-300 lh-28 pe-lg-5 w-lg-75 mt-0 mb-3 py-lg-3" data-aos="fade-up" data-aos-duration="400"  data-delay="300">When you join our journey, you are choosing a partner who believes in a healthier, more balanced you. When you join our journey. Quizzes are working for them — and they can for you too. or a modern web app gives you full control.</p>
                             <div class="d-flex flex-sm-row flex-column gap-sm-3 gap-2 pb-0">
-                                <a href="#" data-aos="zoom-in" data-aos-duration="400" data-delay="400" class="btn bg-green btn-lg rounded-2 px-4 text-white mb-1 btn-hover-bg-lighten-green border-0">
+                                <a href="pricing.html" data-aos="zoom-in" data-aos-duration="400" data-delay="400" class="btn bg-green btn-lg rounded-2 px-4 text-white mb-1 btn-hover-bg-lighten-green border-0">
                                     <span>Start trial for 14 days</span>
                                     <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="feather feather-arrow-up-right ms-2"><line x1="7" y1="17" x2="17" y2="7"></line><polyline points="7 7 17 7 17 17"></polyline></svg>
                                 </a>
-                                <a href="#" data-aos="zoom-in" data-aos-duration="400" data-delay="500" class="btn bg-light btn-lg rounded-2 px-4 text-gray-900 mb-1 btn-hover-bg-light border-0">
+                                <a href="about.html" data-aos="zoom-in" data-aos-duration="400" data-delay="500" class="btn bg-light btn-lg rounded-2 px-4 text-gray-900 mb-1 btn-hover-bg-light border-0">
                                     <span>Explore more</span>
                                 </a>
                             </div>
@@ -222,7 +223,7 @@
                                 <h3 class="text-gray-900 display2-size fw-600">Marketing Strategy</h3>
                                 <p class="text-gray-800 pe-lg-5">Our design services starts and ends with a best-in-class experience strategy that builds brands.</p>
                                 <div>
-                                    <a href="#" class="btn bg-transparent btn-lg rounded-2 p-0 text-gray-900">
+                                    <a href="about.html" class="btn bg-transparent btn-lg rounded-2 p-0 text-gray-900">
                                         Learn more
                                         <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="feather feather-arrow-up-right ms-2"><line x1="7" y1="17" x2="17" y2="7"></line><polyline points="7 7 17 7 17 17"></polyline></svg>
                                     </a>
@@ -240,7 +241,7 @@
                                 <h3 class="text-gray-900 display2-size fw-600">Mobile App Design</h3>
                                 <p class="text-gray-800 pe-lg-5">From first concept to final detail, our design is rooted in experience strategy that drives brand growth.</p>
                                 <div>
-                                    <a href="#" class="btn bg-transparent btn-lg rounded-2 p-0 text-gray-900">
+                                    <a href="about.html" class="btn bg-transparent btn-lg rounded-2 p-0 text-gray-900">
                                         Learn more
                                         <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="feather feather-arrow-up-right ms-2"><line x1="7" y1="17" x2="17" y2="7"></line><polyline points="7 7 17 7 17 17"></polyline></svg>
                                     </a>
@@ -258,7 +259,7 @@
                                 <h3 class="text-gray-900 display2-size fw-600">Content Management</h3>
                                 <p class="text-gray-800 pe-lg-5">Every design begins and ends with design strategy because great brands are not built by accident.</p>
                                 <div>
-                                    <a href="#" class="btn bg-transparent btn-lg rounded-2 p-0 text-gray-900">
+                                    <a href="about.html" class="btn bg-transparent btn-lg rounded-2 p-0 text-gray-900">
                                         Learn more
                                         <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="feather feather-arrow-up-right ms-2"><line x1="7" y1="17" x2="17" y2="7"></line><polyline points="7 7 17 7 17 17"></polyline></svg>
                                     </a>
@@ -276,7 +277,7 @@
                                 <h3 class="text-gray-900 display2-size fw-600">Mobile App Design</h3>
                                 <p class="text-gray-800 pe-lg-5">Our design services starts and ends with a best-in-class experience strategy that builds brands.</p>
                                 <div>
-                                    <a href="#" class="btn bg-transparent btn-lg rounded-2 p-0 text-gray-900">
+                                    <a href="about.html" class="btn bg-transparent btn-lg rounded-2 p-0 text-gray-900">
                                         Learn more
                                         <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="feather feather-arrow-up-right ms-2"><line x1="7" y1="17" x2="17" y2="7"></line><polyline points="7 7 17 7 17 17"></polyline></svg>
                                     </a>
@@ -331,8 +332,8 @@
                         <p class="text-gray-300 fw-400 pe-lg-5">We start and finish every design project with a world-class experience strategy that builds lasting brands.</p>
                     </div>
                     <div class="col-lg-6 d-flex">
-                        <a href="#" class="btn bg-darkgreen btn-lg rounded-2 px-4 mt-auto ms-lg-auto text-gray-900 mb-1 btn-hover-bg-lighten-darkgreen">
-                            <span>Start trial for 14 days</span>
+                        <a href="about-2.html" class="btn bg-darkgreen btn-lg rounded-2 px-4 mt-auto ms-lg-auto text-gray-900 mb-1 btn-hover-bg-lighten-darkgreen">
+                            <span>More about us</span>
                             <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="feather feather-arrow-up-right ms-2"><line x1="7" y1="17" x2="17" y2="7"></line><polyline points="7 7 17 7 17 17"></polyline></svg>
                         </a>
                     </div>
@@ -479,7 +480,7 @@
                                     <span class="fw-600 text-gray-900">Startup</span>
                                     <h2 class="display4-size fw-600 text-gray-900 lh-1 my-3">$29<span class="fs-16 fw-400 text-gray-700 d-inline-block lh-1"> /month</span></h2>
                                     <div>
-                                        <a href="#" class="btn bg-darkgreen btn-lg rounded-2 text-gray-900 btn-hover-bg-lighten-darkgreen">
+                                        <a href="pricing.html" class="btn bg-darkgreen btn-lg rounded-2 text-gray-900 btn-hover-bg-lighten-darkgreen">
                                             <span>Buy now</span>
                                             <svg xmlns="http://www.w3.org/2000/svg" width="18" height="18" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="feather feather-arrow-up-right ms-2"><line x1="7" y1="17" x2="17" y2="7"></line><polyline points="7 7 17 7 17 17"></polyline></svg>
                                         </a>
@@ -523,7 +524,7 @@
                                     <span class="fw-600 text-gray-900">Business</span>
                                     <h2 class="display4-size fw-600 text-gray-900 lh-1 my-3">$49<span class="fs-16 fw-400 text-gray-700 d-inline-block lh-1"> /month</span></h2>
                                     <div>
-                                        <a href="#" class="btn bg-darkgreen btn-lg rounded-2 text-gray-900 btn-hover-bg-lighten-darkgreen">
+                                        <a href="pricing.html" class="btn bg-darkgreen btn-lg rounded-2 text-gray-900 btn-hover-bg-lighten-darkgreen">
                                             <span>Buy now</span>
                                             <svg xmlns="http://www.w3.org/2000/svg" width="18" height="18" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="feather feather-arrow-up-right ms-2"><line x1="7" y1="17" x2="17" y2="7"></line><polyline points="7 7 17 7 17 17"></polyline></svg>
                                         </a>
@@ -568,7 +569,7 @@
                                     <p class="fw-400 text-gray-400 m-0 fs-15">Your specific needs, processes, and customers to craft systems that actually work</p>
                                 </div>
                                 <div class="">
-                                    <a href="#" class="btn bg-darkgreen btn-lg rounded-2 text-gray-900 btn-hover-bg-lighten-darkgreen w-21">
+                                    <a href="pricing.html" class="btn bg-darkgreen btn-lg rounded-2 text-gray-900 btn-hover-bg-lighten-darkgreen w-21">
                                         <span>Contact us</span>
                                     </a>
                                 </div>
@@ -589,7 +590,7 @@
                             <p class="text-gray-700 " data-aos="fade-up" data-aos-duration="400" data-aos-delay="100">New blog articles, insights, and updates here.</p>
                         </div>
                         <div class="col-lg-6 d-flex">
-                            <a href="#" class="btn bg-darkgreen btn-lg rounded-2 px-4 mt-auto ms-lg-auto text-gray-900 mb-1 btn-hover-bg-lighten-darkgreen" data-aos="fade-up" data-aos-duration="400" data-aos-delay="000">
+                            <a href="blog-2.html" class="btn bg-darkgreen btn-lg rounded-2 px-4 mt-auto ms-lg-auto text-gray-900 mb-1 btn-hover-bg-lighten-darkgreen" data-aos="fade-up" data-aos-duration="400" data-aos-delay="000">
                                 <span>Check out more blogs</span>
                                 <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="feather feather-arrow-up-right ms-2"><line x1="7" y1="17" x2="17" y2="7"></line><polyline points="7 7 17 7 17 17"></polyline></svg>
                             </a>
