--- a/src/home-three.html
+++ b/src/home-three.html
@@ -99,6 +99,7 @@
                                                     <li><a class="nav-item" href="team.html">Team</a></li>
                                                     <li><a class="nav-item" href="contact.html">Contact</a></li>
                                                     <li><a class="nav-item" href="contact-v2.html">Contact v2</a></li>
+                                                    <li><a class="nav-item" href="changelog.html">Changelog</a></li>
                                                 </ul>
                                             </div>
                                             <div>
@@ -151,19 +152,19 @@
                                 </li>
                             </ul>
                             <div class="menu-bottom">
-                                <a href="#" class="btn bg-cyan btn-md rounded-2 px-4">Register</a>
+                                <a href="register.html" class="btn bg-cyan btn-md rounded-2 text-gray-900 px-4">Register</a>
                             </div>
                         </div>
                         
-                        <div class="d-flex items-center gap-3 font-sora">
+                        <div class="d-flex align-items-center gap-3 font-sora">
                             <button aria-label="search" class="btn btn-outline text-gray-700 p-0">
                                 <svg viewBox="0 0 24 24" width="24" height="24" stroke="currentColor" stroke-width="2" fill="none" stroke-linecap="round" stroke-linejoin="round" class="text-gray-900"><circle cx="11" cy="11" r="8"></circle><line x1="21" y1="21" x2="16.65" y2="16.65"></line></svg>
                             </button>
-                            <button aria-label="cart" class="btn btn-outline text-gray-700 p-0 position-relative">
+                            <a href="cart.html" aria-label="cart" class="btn btn-outline text-gray-700 p-0 position-relative">
                                 <svg viewBox="0 0 24 24" width="24" height="24" stroke="currentColor" stroke-width="2" fill="none" stroke-linecap="round" stroke-linejoin="round" class="text-gray-900"><path d="M6 2L3 6v14a2 2 0 0 0 2 2h14a2 2 0 0 0 2-2V6l-3-4z"></path><line x1="3" y1="6" x2="21" y2="6"></line><path d="M16 10a4 4 0 0 1-8 0"></path></svg>
                                 <span class="cart-badge bg-cyan text-white">2</span>
-                            </button>
-                            <a href="#" class="btn bg-cyan text-white fw-500 btn-md rounded-2 px-4 ms-2 d-none d-lg-flex">Register</a>
+                            </a>
+                            <a href="register.html" class="btn bg-cyan text-gray-900 fw-500 btn-md rounded-2 px-4 ms-2 d-none d-lg-flex">Register</a>
                             <button aria-label="menu" class="mobile-menu-trigger btn btn-outline px-0 text-gray-700 d-flex d-lg-none">
                                 <svg viewBox="0 0 24 24" width="24" height="24" stroke="currentColor" stroke-width="2" fill="none" stroke-linecap="round" stroke-linejoin="round" class="text-gray-900"><line x1="3" y1="12" x2="21" y2="12"></line><line x1="3" y1="6" x2="21" y2="6"></line><line x1="3" y1="18" x2="21" y2="18"></line></svg>
                             </button>
@@ -204,11 +205,11 @@
                             <h1 class="text-white display6-size fw-600 lh-1">Enterprises and Startup Build Powerful  — <span class="text-gradient">Digital Solutions</span></h1>
                             <p class="fw-400 text-gray-300 lh-28 mt-0 mb-3 py-lg-3 w-lg-75 text-center mx-auto">When you join our journey, you are choosing a partner who believes in a healthier. When you join our journey. Quizzes are working for them — and they can for you too.</p>
                             <div class="d-flex flex-sm-row justify-content-center flex-column gap-sm-3 gap-2 pb-0">
-                                <a href="#" class="btn bg-cyan btn-lg rounded-2 px-4 text-gray-900 mb-1">
+                                <a href="pricing.html" class="btn bg-cyan btn-lg rounded-2 px-4 text-gray-900 mb-1">
                                     Start trial for 14 days
                                     <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="feather feather-arrow-up-right ms-2"><line x1="7" y1="17" x2="17" y2="7"></line><polyline points="7 7 17 7 17 17"></polyline></svg>
                                 </a>
-                                <a href="#" class="btn bg-gray-100 btn-lg rounded-2 px-4 text-gray-900 mb-1">
+                                <a href="about.html" class="btn bg-gray-100 btn-lg rounded-2 px-4 text-gray-900 mb-1">
                                     Explore more
                                 </a>
                             </div>
@@ -227,11 +228,11 @@
                             <div><span class="d-inline-block px-3 py-1 border border-gray-300 rounded-pill fs-12 fw-500 text-uppercase text-gray-900 bg-white" data-aos="zoom-in" data-aos-delay="100" data-aos-duration="400">How We Work</span></div>
                             <h2 class="display5-size fw-600 text-gray-900 mt-4 mb-4" data-aos="fade-up" data-aos-delay="200" data-aos-duration="400">Automate your equity plans so you can focus on <span class="text-gradient">growing your</span> company</h2>
                             <p class="text-gray-800 fw-400 pe-lg-5 me-lg-4" data-aos="fade-up" data-aos-delay="200" data-aos-duration="400"> Our platform empowers users and businesses alike to transact with confidence in a rapidly evolving digital economy.</p>
-                                <div class="mt-auto" data-aos="fade-up" data-aos-delay="200" data-aos-duration="400">
-                                    <a href="#" class="btn bg-cyan btn-lg rounded-2 px-4 mt-auto ms-lg-auto text-gray-900 mb-1 btn-hover-bg-lighten-cyan">
-                                        <span> Check out more</span>
-                                        <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="feather feather-arrow-up-right ms-2"><line x1="7" y1="17" x2="17" y2="7"></line><polyline points="7 7 17 7 17 17"></polyline></svg>
-                                    </a>
+                            <div class="mt-auto" data-aos="fade-up" data-aos-delay="200" data-aos-duration="400">
+                                <a href="about-2.html" class="btn bg-cyan btn-lg rounded-2 px-4 mt-auto ms-lg-auto text-gray-900 mb-1 btn-hover-bg-lighten-cyan">
+                                    <span> Check out more</span>
+                                    <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="feather feather-arrow-up-right ms-2"><line x1="7" y1="17" x2="17" y2="7"></line><polyline points="7 7 17 7 17 17"></polyline></svg>
+                                </a>
                             </div>
                         </div>
                         <div class="col-lg-6">
@@ -495,7 +496,7 @@
                                     Can I have a proposal I can with my team?
                                 </p>
                                 <div>
-                                    <a href="#" class="btn bg-cyan btn-lg rounded-2 px-4 mt-4 text-gray-900 mb-1 btn-hover-bg-lighten-cyan" data-aos="fade-up" data-aos-delay="200" data-aos-duration="400">
+                                    <a href="about.html" class="btn bg-cyan btn-lg rounded-2 px-4 mt-4 text-gray-900 mb-1 btn-hover-bg-lighten-cyan" data-aos="fade-up" data-aos-delay="200" data-aos-duration="400">
                                         <span>Check out more</span>
                                         <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="feather feather-arrow-up-right ms-2"><line x1="7" y1="17" x2="17" y2="7"></line><polyline points="7 7 17 7 17 17"></polyline></svg>
                                     </a>
@@ -636,7 +637,7 @@
                             <div class="d-flex flex-column gap-3 p-4 rounded-4 overflow-hidden h-100" style="background:linear-gradient(to bottom, #103426, #0F7470);">
                                 <h3 class="display4-size text-white fw-500 pe-lg-4" style="font-size: 28px;">Ready to start your success story</h3>
                                 <div class="mt-auto">
-                                    <a href="#" class="btn bg-cyan btn-lg rounded-2 px-4 mt-auto text-gray-900 mb-1 btn-hover-bg-lighten-cyan">
+                                    <a href="team.html" class="btn bg-cyan btn-lg rounded-2 px-4 mt-auto text-gray-900 mb-1 btn-hover-bg-lighten-cyan">
                                         <span>See more</span>
                                         <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="feather feather-arrow-up-right ms-2"><line x1="7" y1="17" x2="17" y2="7"></line><polyline points="7 7 17 7 17 17"></polyline></svg>
                                     </a>
@@ -659,7 +660,7 @@
                         </div>
                         <div class="col-lg-6 text-lg-end mt-auto">
                             <div>
-                                <a href="#" class="btn bg-cyan btn-lg rounded-2 px-4 mt-auto mb-3 ms-lg-auto text-gray-900 btn-hover-bg-lighten-cyan" data-aos="zoom-in" data-aos-delay="200" data-aos-duration="400" >
+                                <a href="team.html" class="btn bg-cyan btn-lg rounded-2 px-4 mt-auto mb-3 ms-lg-auto text-gray-900 btn-hover-bg-lighten-cyan" data-aos="zoom-in" data-aos-delay="200" data-aos-duration="400" >
                                     <span>See more</span>
                                     <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="feather feather-arrow-up-right ms-2"><line x1="7" y1="17" x2="17" y2="7"></line><polyline points="7 7 17 7 17 17"></polyline></svg>
                                 </a>
@@ -765,7 +766,7 @@
                             <h2 class="display5-size text-gray-900 fw-600 mb-lg-3 mb-2 mt-3" data-aos="fade-up" data-aos-delay="200" data-aos-duration="400">Have any questions? here some answers</h2>
                             <p class="text-gray-800 fw-400 pe-lg-5 me-lg-4" data-aos="fade-up" data-aos-delay="200" data-aos-duration="400">Whether you're building a startup landing page, a dashboard interface, or a modern web app gives you full control.</p>
                             <div class="mt-auto" data-aos="fade-up" data-aos-delay="200" data-aos-duration="400">
-                                <a href="#" class="btn bg-cyan btn-lg rounded-2 px-4 mt-auto ms-lg-auto text-gray-900 mb-1 btn-hover-bg-lighten-cyan">
+                                <a href="about.html" class="btn bg-cyan btn-lg rounded-2 px-4 mt-auto ms-lg-auto text-gray-900 mb-1 btn-hover-bg-lighten-cyan">
                                 <span>Check out more</span>
                                 <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="feather feather-arrow-up-right ms-2"><line x1="7" y1="17" x2="17" y2="7"></line><polyline points="7 7 17 7 17 17"></polyline></svg>
                             </a>
