--- a/src/home-two.html
+++ b/src/home-two.html
@@ -94,6 +94,7 @@
                                                 <li><a class="nav-item" href="team.html">Team</a></li>
                                                 <li><a class="nav-item" href="contact.html">Contact</a></li>
                                                 <li><a class="nav-item" href="contact-v2.html">Contact v2</a></li>
+                                                <li><a class="nav-item" href="changelog.html">Changelog</a></li>
                                             </ul>
                                         </div>
                                         <div>
@@ -146,19 +147,19 @@
                             </li>
                         </ul>
                         <div class="menu-bottom">
-                            <a href="#" class="btn bg-warning btn-md rounded-2 px-4">Register</a>
+                            <a href="register.html" class="btn bg-warning btn-md rounded-2 px-4">Register</a>
                         </div>
                     </div>
                     
-                    <div class="d-flex items-center gap-3">
+                    <div class="d-flex align-items-center gap-3">
                         <button aria-label="search" class="btn btn-outline  p-0">
                             <svg viewBox="0 0 24 24" width="24" height="24" stroke="currentColor" stroke-width="2" fill="none" stroke-linecap="round" stroke-linejoin="round"><circle cx="11" cy="11" r="8"></circle><line x1="21" y1="21" x2="16.65" y2="16.65"></line></svg>
                         </button>
-                        <button aria-label="cart" class="btn btn-outline  p-0 position-relative">
+                        <a href="cart.html" aria-label="cart" class="btn btn-outline  p-0 position-relative">
                             <svg viewBox="0 0 24 24" width="24" height="24" stroke="currentColor" stroke-width="2" fill="none" stroke-linecap="round" stroke-linejoin="round"><path d="M6 2L3 6v14a2 2 0 0 0 2 2h14a2 2 0 0 0 2-2V6l-3-4z"></path><line x1="3" y1="6" x2="21" y2="6"></line><path d="M16 10a4 4 0 0 1-8 0"></path></svg>
                             <span class="cart-badge bg-warning">2</span>
-                        </button>
-                        <a href="#" class="btn bg-warning text-gray-800 fw-500 btn-md rounded-2 px-4 ms-2 d-none d-md-flex">Register</a>
+                        </a>
+                        <a href="register.html" class="btn bg-warning text-gray-800 fw-500 btn-md rounded-2 px-4 ms-2 d-none d-md-flex">Register</a>
                         <button aria-label="menu" class="mobile-menu-trigger btn btn-outline px-0  d-flex d-lg-none">
                             <svg viewBox="0 0 24 24" width="24" height="24" stroke="currentColor" stroke-width="2" fill="none" stroke-linecap="round" stroke-linejoin="round"><line x1="3" y1="12" x2="21" y2="12"></line><line x1="3" y1="6" x2="21" y2="6"></line><line x1="3" y1="18" x2="21" y2="18"></line></svg>
                         </button>
@@ -201,11 +202,11 @@
                     <h1 class="text-white display6-size fw-500">Effortlessly Growth Organize <span class="d-inline-block rounded-4 bg-gradient-orange px-3">Product</span> Management</h1>
                     <p class="fw-400 text-gray-100 w-lg-75 lh-28 pe-xl-5 mt-0 mb-4 py-xl-3">When you join our journey, you are choosing a partner who believes in a healthier, more balanced you — and works tirelessly to help you get there.</p>
                     <div class="d-flex flex-sm-row flex-column gap-sm-3 gap-2 ">
-                        <a href="#" class="btn bg-orange btn-lg rounded-2 px-4 text-white mb-1 d-flex gap-3 align-items-center justify-content-center btn-hover-bg-darken-warning border-0">
+                        <a href="pricing-2.html" class="btn bg-orange btn-lg rounded-2 px-4 text-white mb-1 d-flex gap-3 align-items-center justify-content-center btn-hover-bg-darken-warning border-0">
                             <span>Start trial for 14 days</span>
                             <svg viewBox="0 0 24 24" width="20" height="20" stroke="currentColor" stroke-width="2" fill="none" stroke-linecap="round" stroke-linejoin="round" class="text-white"><line x1="7" y1="17" x2="17" y2="7"></line><polyline points="7 7 17 7 17 17"></polyline></svg>
                         </a>
-                        <a href="#" class="btn bg-gray-100 btn-lg rounded-2 px-4 text-gray-900 mb-1">
+                        <a href="about.html" class="btn bg-gray-100 btn-lg rounded-2 px-4 text-gray-900 mb-1">
                             Explore more
                         </a>
                     </div>
@@ -262,7 +263,7 @@
                             <h3 class="display3-size text-gray-900 fw-600">Digital Marketing</h3>
                             <p class="text-gray-700 fw-400 mt-1">Its flexibility allows you to adapt it for any business need — from fintech and analytics tools to CRM platforms and admin.</p>
                             <div>
-                                <a href="#" class="btn bg-transparent btn-lg rounded-2 p-0 text-gray-900">
+                                <a href="about.html" class="btn bg-transparent btn-lg rounded-2 p-0 text-gray-900">
                                     Learn more
                                     <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="feather feather-arrow-up-right ms-2"><line x1="7" y1="17" x2="17" y2="7"></line><polyline points="7 7 17 7 17 17"></polyline></svg>
                                 </a>
@@ -283,7 +284,7 @@
                             <h3 class="display3-size text-gray-900 fw-600">Marketing Strategy</h3>
                             <p class="text-gray-700 fw-400 mt-1">Its flexibility allows you to adapt it for any business need — from fintech and analytics tools to CRM platforms and admin.</p>
                             <div>
-                                <a href="#" class="btn bg-transparent btn-lg rounded-2 p-0 text-gray-900">
+                                <a href="about.html" class="btn bg-transparent btn-lg rounded-2 p-0 text-gray-900">
                                     Learn more
                                     <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="feather feather-arrow-up-right ms-2"><line x1="7" y1="17" x2="17" y2="7"></line><polyline points="7 7 17 7 17 17"></polyline></svg>
                                 </a>
@@ -305,7 +306,7 @@
                             <h3 class="display3-size text-gray-900 fw-600">Made for Developer</h3>
                             <p class="text-gray-700 fw-400 mt-1">Its flexibility allows you to adapt it for any business need — from fintech and analytics tools to CRM platforms and admin.</p>
                             <div>
-                                <a href="#" class="btn bg-transparent btn-lg rounded-2 p-0 text-gray-900">
+                                <a href="about.html" class="btn bg-transparent btn-lg rounded-2 p-0 text-gray-900">
                                     Learn more
                                     <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="feather feather-arrow-up-right ms-2"><line x1="7" y1="17" x2="17" y2="7"></line><polyline points="7 7 17 7 17 17"></polyline></svg>
                                 </a>
@@ -326,7 +327,7 @@
                             <h3 class="display3-size text-gray-900 fw-600">24x7 Customer Supports</h3>
                             <p class="text-gray-700 fw-400 mt-1">Its flexibility allows you to adapt it for any business need — from fintech and analytics tools to CRM platforms and admin.</p>
                             <div>
-                                <a href="#" class="btn bg-transparent btn-lg rounded-2 p-0 text-gray-900">
+                                <a href="about.html" class="btn bg-transparent btn-lg rounded-2 p-0 text-gray-900">
                                     Learn more
                                     <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="feather feather-arrow-up-right ms-2"><line x1="7" y1="17" x2="17" y2="7"></line><polyline points="7 7 17 7 17 17"></polyline></svg>
                                 </a>
@@ -401,7 +402,7 @@
                             <h3 class="text-gray-900 fw-600 display4-size ps-2 pe-lg-5">Make your customers smile with every step.</h3>
                             <div class="d-flex flex-row justify-content-between mt-auto">
                                 <div class="mt-auto">
-                                    <a href="#" aria-label="play" class="w-14 h-14 align-items-center d-flex justify-content-center bg-gray-900 rounded-pill">
+                                    <a href="about-2.html" aria-label="play" class="w-14 h-14 align-items-center d-flex justify-content-center bg-gray-900 rounded-pill">
                                         <svg xmlns="http://www.w3.org/2000/svg" width="28" height="28" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round" class="feather feather-arrow-up-right text-white"><line x1="7" y1="17" x2="17" y2="7"></line><polyline points="7 7 17 7 17 17"></polyline></svg>
                                     </a>
                                 </div>
@@ -424,7 +425,7 @@
                         <p class="text-gray-900 fw-400" data-aos="fade-up" data-aos-duration="500" data-aos-delay="400">Every demo crafted with Exsit offers a unique layout and visual experience, ensuring that no two designs ever look the same. Whether you're building a startup landing page, a dashboard interface, or a modern web app, Exsit gives you full control over the look and feel of your site.</p>
                         <p class="text-gray-900 fw-400 mb-4 pb-2" data-aos="fade-up" data-aos-duration="500" data-aos-delay="600">Whether you're building a startup landing page, a dashboard interface, or a modern web app, Exsit gives you full control over the look and feel of your site.</p>
                         <div>
-                            <a href="#" class="btn bg-warning btn-lg rounded-2 px-4 text-gray-900 mb-1 btn-hover-bg-darken-warning border-0" data-aos="fade-up" data-aos-duration="500" data-aos-delay="400">
+                            <a href="about.html" class="btn bg-warning btn-lg rounded-2 px-4 text-gray-900 mb-1 btn-hover-bg-darken-warning border-0" data-aos="fade-up" data-aos-duration="500" data-aos-delay="400">
                                 <span>Explore more</span>
                                 <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="feather feather-arrow-up-right ms-2"><line x1="7" y1="17" x2="17" y2="7"></line><polyline points="7 7 17 7 17 17"></polyline></svg>
                             </a>
@@ -506,7 +507,7 @@
                                                 One year support
                                             </p>
                                         </div>
-                                        <a href="#" class="btn bg-gray-900 btn-lg rounded-2 text-white btn-hover-bg-darken-dark border-0 my-2">
+                                        <a href="pricing-2.html" class="btn bg-gray-900 btn-lg rounded-2 text-white btn-hover-bg-darken-dark border-0 my-2">
                                             <span>Get Start</span>
                                         </a>
                                     </div>
@@ -553,7 +554,7 @@
                                                 One year support
                                             </p>
                                         </div>
-                                        <a href="#" class="btn bg-warning btn-lg rounded-2 text-gray-900 btn-hover-bg-darken-warning border-0 my-2">
+                                        <a href="pricing-2.html" class="btn bg-warning btn-lg rounded-2 text-gray-900 btn-hover-bg-darken-warning border-0 my-2">
                                             <span>Start trial for 14 days</span>
                                         </a>
                                     </div>
@@ -1018,7 +1019,7 @@
                 </div>
                 <div class="col-lg-6 d-flex">
                     <div class="mt-auto ms-lg-auto">
-                        <a href="#" data-aos="fade-left" data-aos-duration="400" data-aos-delay="400" class="btn bg-orange btn-lg rounded-2 px-4 text-white mb-1 d-flex gap-3 align-items-center justify-content-center btn-hover-bg-darken-warning border-0">
+                        <a href="blog-1.html" data-aos="fade-left" data-aos-duration="400" data-aos-delay="400" class="btn bg-orange btn-lg rounded-2 px-4 text-white mb-1 d-flex gap-3 align-items-center justify-content-center btn-hover-bg-darken-warning border-0">
                             <span>Explore more</span>
                             <svg viewBox="0 0 24 24" width="20" height="20" stroke="currentColor" stroke-width="2" fill="none" stroke-linecap="round" stroke-linejoin="round" class="text-white"><line x1="7" y1="17" x2="17" y2="7"></line><polyline points="7 7 17 7 17 17"></polyline></svg>
                         </a>
