--- a/src/home-four.html
+++ b/src/home-four.html
@@ -49,7 +49,7 @@
         </div>
         <!-- upper header -->
         <div class="upper-header bg-darkgreen text-center font-sora">
-            <p class="text-gray-900 fw-400 py-2 m-0 fs-14">Get the definite payments pricing guide for platforms   <a href="#" class="fw-600 text-gray-900 text-decoration-underline">Shop now</a></p>
+            <p class="text-gray-900 fw-400 py-2 m-0 fs-14">Get the definite payments pricing guide for platforms   <a href="shop-1.html" class="fw-600 text-gray-900 text-decoration-underline">Shop now</a></p>
         </div>
         
         <!-- header wrap -->
@@ -108,6 +108,7 @@
                                                     <li><a class="nav-item" href="team.html">Team</a></li>
                                                     <li><a class="nav-item" href="contact.html">Contact</a></li>
                                                     <li><a class="nav-item" href="contact-v2.html">Contact v2</a></li>
+                                                    <li><a class="nav-item" href="changelog.html">Changelog</a></li>
                                                 </ul>
                                             </div>
                                             <div>
@@ -160,19 +161,19 @@
                                 </li>
                             </ul>
                             <div class="menu-bottom">
-                                <a href="#" class="btn btn-darkgreen btn-md rounded-2 px-4">Register</a>
+                                <a href="register.html" class="btn btn-darkgreen btn-md rounded-2 px-4">Register</a>
                             </div>
                         </div>
                         
-                        <div class="d-flex items-center gap-3 font-sora">
+                        <div class="d-flex align-items-center gap-3 font-sora">
                             <button aria-label="search" class="btn btn-outline p-0">
                                 <svg viewBox="0 0 24 24" width="24" height="24" stroke="currentColor" stroke-width="2" fill="none" stroke-linecap="round" stroke-linejoin="round"><circle cx="11" cy="11" r="8"></circle><line x1="21" y1="21" x2="16.65" y2="16.65"></line></svg>
                             </button>
-                            <button aria-label="cart" class="btn btn-outline p-0 position-relative">
+                            <a href="cart.html" aria-label="cart" class="btn btn-outline p-0 position-relative">
                                 <svg viewBox="0 0 24 24" width="24" height="24" stroke="currentColor" stroke-width="2" fill="none" stroke-linecap="round" stroke-linejoin="round"><path d="M6 2L3 6v14a2 2 0 0 0 2 2h14a2 2 0 0 0 2-2V6l-3-4z"></path><line x1="3" y1="6" x2="21" y2="6"></line><path d="M16 10a4 4 0 0 1-8 0"></path></svg>
                                 <span class="cart-badge bg-darkgreen text-gray-900">2</span>
-                            </button>
-                            <a href="#" class="btn bg-darkgreen text-gray-900 fw-500 btn-md rounded-2 px-4 ms-2 d-none d-md-flex">Register</a>
+                            </a>
+                            <a href="register.html" class="btn bg-darkgreen text-gray-900 fw-500 btn-md rounded-2 px-4 ms-2 d-none d-md-flex">Register</a>
                             <button aria-label="menu" class="mobile-menu-trigger btn btn-outline px-0 d-flex d-lg-none">
                                 <svg viewBox="0 0 24 24" width="24" height="24" stroke="currentColor" stroke-width="2" fill="none" stroke-linecap="round" stroke-linejoin="round"><line x1="3" y1="12" x2="21" y2="12"></line><line x1="3" y1="6" x2="21" y2="6"></line><line x1="3" y1="18" x2="21" y2="18"></line></svg>
                             </button>
@@ -207,11 +208,11 @@
                         <h1 class="text-white display6-size fw-600" data-aos="fade-up" data-aos-duration="400" data-aos-delay="100">Digital Solution Make <span class="text-darkgreen">growth</span> <span class="d-inline-block border-darkgreen border-3 border-bottom">Financial</span></h1>
                         <p class="fw-400 text-gray-300 w-lg-75 lh-28 pe-lg-3 my-4 py-lg-3" data-aos="fade-up" data-aos-duration="400" data-aos-delay="200">When you join our journey, you are choosing a partner who believes in a healthier, more balanced you. When you join our journey,</p>
                         <div class="d-flex flex-sm-row flex-column gap-sm-3 gap-2 ">
-                            <a href="#" data-aos="zoom-in" data-aos-duration="400" data-aos-delay="100" class="btn bg-darkgreen btn-lg rounded-2 px-4 text-gray-900 mb-1 d-flex gap-3 align-items-center justify-content-center btn-hover-bg-lighten-darkgreen border-0">
+                            <a href="pricing.html" data-aos="zoom-in" data-aos-duration="400" data-aos-delay="100" class="btn bg-darkgreen btn-lg rounded-2 px-4 text-gray-900 mb-1 d-flex gap-3 align-items-center justify-content-center btn-hover-bg-lighten-darkgreen border-0">
                                 <span>Start trial for 14 days</span>
                                 <svg viewBox="0 0 24 24" width="20" height="20" stroke="currentColor" stroke-width="2" fill="none" stroke-linecap="round" stroke-linejoin="round" class="text-gray-900"><line x1="7" y1="17" x2="17" y2="7"></line><polyline points="7 7 17 7 17 17"></polyline></svg>
                             </a>
-                            <a href="#" data-aos="zoom-in" data-aos-duration="400" data-aos-delay="100" class="btn bg-gray-100 btn-lg rounded-2 px-4 text-gray-900 mb-1">
+                            <a href="about.html" data-aos="zoom-in" data-aos-duration="400" data-aos-delay="100" class="btn bg-gray-100 btn-lg rounded-2 px-4 text-gray-900 mb-1">
                                 Explore more
                             </a>
                         </div>
@@ -250,7 +251,7 @@
                         <p class="text-gray-900 fw-400 mb-0" data-aos="fade-up" data-aos-duration="500" data-aos-delay="100">Genuine feedback from those who know us best.</p>
                     </div>
                     <div class="col-lg-6 d-flex">
-                        <a href="#" class="btn bg-darkgreen btn-lg rounded-2 px-4 mt-auto ms-lg-auto text-gray-900 mb-1 btn-hover-bg-lighten-darkgreen" data-aos="fade-up" data-aos-duration="500" data-aos-delay="100">
+                        <a href="about.html" class="btn bg-darkgreen btn-lg rounded-2 px-4 mt-auto ms-lg-auto text-gray-900 mb-1 btn-hover-bg-lighten-darkgreen" data-aos="fade-up" data-aos-duration="500" data-aos-delay="100">
                             <span>More about us</span>
                             <svg viewBox="0 0 24 24" width="20" height="20" stroke="currentColor" stroke-width="2" fill="none" stroke-linecap="round" stroke-linejoin="round" class="text-gray-900"><line x1="7" y1="17" x2="17" y2="7"></line><polyline points="7 7 17 7 17 17"></polyline></svg>
                         </a>
@@ -460,7 +461,7 @@
                                     </svg>
                                     One year support
                                 </p>
-                                <a href="#" class="btn bg-darkgreen btn-lg rounded-2 pt-3 mt-4 text-gray-900 btn-hover-bg-lighten-darkgreen border-0">
+                                <a href="pricing.html" class="btn bg-darkgreen btn-lg rounded-2 pt-3 mt-4 text-gray-900 btn-hover-bg-lighten-darkgreen border-0">
                                     <span>Try for Free</span>
                                     <svg viewBox="0 0 24 24" width="20" height="20" stroke="currentColor" stroke-width="2" fill="none" stroke-linecap="round" stroke-linejoin="round" class="text-gray-900"><line x1="7" y1="17" x2="17" y2="7"></line><polyline points="7 7 17 7 17 17"></polyline></svg>
                                 </a>
@@ -507,7 +508,7 @@
                                     </svg>
                                     24/7 chat support
                                 </p>
-                                <a href="#" class="btn bg-white btn-lg rounded-2 pt-3 mt-4 text-gray-900 btn-hover-bg-lighten-light3 border-0">
+                                <a href="pricing-2.html" class="btn bg-white btn-lg rounded-2 pt-3 mt-4 text-gray-900 btn-hover-bg-lighten-light3 border-0">
                                     <span>Get Started</span>
                                     <svg viewBox="0 0 24 24" width="20" height="20" stroke="currentColor" stroke-width="2" fill="none" stroke-linecap="round" stroke-linejoin="round" class="text-gray-900"><line x1="7" y1="17" x2="17" y2="7"></line><polyline points="7 7 17 7 17 17"></polyline></svg>
                                 </a>
@@ -548,7 +549,7 @@
                                     </svg>
                                     One year support
                                 </p>
-                                <a href="#" class="btn bg-darkgreen btn-lg rounded-2 pt-3 mt-4 text-gray-900 btn-hover-bg-lighten-darkgreen border-0">
+                                <a href="pricing-2.html" class="btn bg-darkgreen btn-lg rounded-2 pt-3 mt-4 text-gray-900 btn-hover-bg-lighten-darkgreen border-0">
                                     <span>Contact to sales</span>
                                     <svg viewBox="0 0 24 24" width="20" height="20" stroke="currentColor" stroke-width="2" fill="none" stroke-linecap="round" stroke-linejoin="round" class="text-gray-900"><line x1="7" y1="17" x2="17" y2="7"></line><polyline points="7 7 17 7 17 17"></polyline></svg>
                                 </a>
@@ -744,7 +745,7 @@
                         </div>
                         <div class="col-lg-6 text-lg-end mt-auto">
                             <div>
-                                <a href="#" class="btn bg-darkgreen btn-lg rounded-2 px-4 mt-auto ms-lg-auto text-gray-900 mb-1 btn-hover-bg-lighten-darkgreen" data-aos="fade-up" data-aos-duration="400" data-aos-delay="200">
+                                <a href="blog-1.html" class="btn bg-darkgreen btn-lg rounded-2 px-4 mt-auto ms-lg-auto text-gray-900 mb-1 btn-hover-bg-lighten-darkgreen" data-aos="fade-up" data-aos-duration="400" data-aos-delay="200">
                                     <span>Check out more blogs</span>
                                     <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="feather feather-arrow-up-right ms-2"><line x1="7" y1="17" x2="17" y2="7"></line><polyline points="7 7 17 7 17 17"></polyline></svg>
                                 </a>
