--- a/src/index.html
+++ b/src/index.html
@@ -22,6 +22,13 @@
 </head>
 
 <body>
+    <!-- preloader -->
+    <div class="preloader">
+        <div class="loading-container">
+            <div class="loading"></div>
+        </div>
+    </div>
+    <!-- preloader -->
     
     <!-- main wrapper -->
     <div id="page" class="font-dm">
@@ -91,6 +98,7 @@
                                                     <li><a class="nav-item" href="team.html">Team</a></li>
                                                     <li><a class="nav-item" href="contact.html">Contact</a></li>
                                                     <li><a class="nav-item" href="contact-v2.html">Contact v2</a></li>
+                                                    <li><a class="nav-item" href="changelog.html">Changelog</a></li>
                                                 </ul>
                                             </div>
                                             <div>
@@ -144,19 +152,19 @@
                                 </li>
                             </ul>
                             <div class="menu-bottom">
-                                <a href="#" class="btn bg-primary btn-md rounded-2 px-4 btn-hover-bg-darken-primary border-0"><span>Register</span></a>
+                                <a href="register.html" class="btn bg-primary btn-md rounded-2 px-4 btn-hover-bg-darken-primary border-0"><span>Register</span></a>
                             </div>
                         </div>
                         
-                        <div class="d-flex items-center gap-3">
+                        <div class="d-flex align-items-center gap-3">
                             <button aria-label="search" class="btn btn-outline text-gray-700 p-0">
                                 <svg viewBox="0 0 24 24" width="24" height="24" stroke="currentColor" stroke-width="2" fill="none" stroke-linecap="round" stroke-linejoin="round" class="text-gray-900"><circle cx="11" cy="11" r="8"></circle><line x1="21" y1="21" x2="16.65" y2="16.65"></line></svg>
                             </button>
-                            <button aria-label="cart" class="btn btn-outline text-gray-700 p-0 position-relative">
+                            <a href="cart.html" aria-label="cart" class="btn btn-outline text-gray-700 p-0 position-relative">
                                 <svg viewBox="0 0 24 24" width="24" height="24" stroke="currentColor" stroke-width="2" fill="none" stroke-linecap="round" stroke-linejoin="round" class="text-gray-900"><path d="M6 2L3 6v14a2 2 0 0 0 2 2h14a2 2 0 0 0 2-2V6l-3-4z"></path><line x1="3" y1="6" x2="21" y2="6"></line><path d="M16 10a4 4 0 0 1-8 0"></path></svg>
                                 <span class="cart-badge bg-primary text-white">2</span>
-                            </button>
-                            <a href="#" class="btn bg-primary text-white fw-500 btn-md rounded-2 px-4 ms-2 d-none d-md-flex btn-hover-bg-darken-primary border-0"><span>Register</span></a>
+                            </a>
+                            <a href="register.html" class="btn bg-primary text-white fw-500 btn-md rounded-2 px-4 ms-2 d-none d-md-flex btn-hover-bg-darken-primary border-0"><span>Register</span></a>
                             <button aria-label="menu" class="mobile-menu-trigger btn btn-outline px-0 text-gray-700 d-flex d-lg-none">
                                 <svg viewBox="0 0 24 24" width="24" height="24" stroke="currentColor" stroke-width="2" fill="none" stroke-linecap="round" stroke-linejoin="round" class="text-gray-900"><line x1="3" y1="12" x2="21" y2="12"></line><line x1="3" y1="6" x2="21" y2="6"></line><line x1="3" y1="18" x2="21" y2="18"></line></svg>
                             </button>
