--- a/src/privacy.html
+++ b/src/privacy.html
@@ -17,6 +17,13 @@
 </head>
 
 <body>
+    <!-- preloader -->
+    <div class="preloader">
+        <div class="loading-container">
+            <div class="loading"></div>
+        </div>
+    </div>
+    <!-- preloader -->
     
     <!-- main wrapper -->
     <div id="page" class="font-dm">
@@ -86,6 +93,7 @@
                                                     <li><a class="nav-item" href="team.html">Team</a></li>
                                                     <li><a class="nav-item" href="contact.html">Contact</a></li>
                                                     <li><a class="nav-item" href="contact-v2.html">Contact v2</a></li>
+                                                    <li><a class="nav-item" href="changelog.html">Changelog</a></li>
                                                 </ul>
                                             </div>
                                             <div>
@@ -139,19 +147,19 @@
                                 </li>
                             </ul>
                             <div class="menu-bottom">
-                                <a href="#" class="btn bg-primary btn-md rounded-2 px-4 btn-hover-bg-darken-primary border-0"><span>Register</span></a>
+                                <a href="register.html" class="btn bg-primary btn-md rounded-2 px-4 btn-hover-bg-darken-primary border-0"><span>Register</span></a>
                             </div>
                         </div>
                         
-                        <div class="d-flex items-center gap-3">
+                        <div class="d-flex align-items-center gap-3">
                             <button aria-label="search" class="btn btn-outline text-gray-700 p-0">
                                 <svg viewBox="0 0 24 24" width="24" height="24" stroke="currentColor" stroke-width="2" fill="none" stroke-linecap="round" stroke-linejoin="round" class="text-gray-900"><circle cx="11" cy="11" r="8"></circle><line x1="21" y1="21" x2="16.65" y2="16.65"></line></svg>
                             </button>
-                            <button aria-label="cart" class="btn btn-outline text-gray-700 p-0 position-relative">
+                            <a href="cart.html" aria-label="cart" class="btn btn-outline text-gray-700 p-0 position-relative">
                                 <svg viewBox="0 0 24 24" width="24" height="24" stroke="currentColor" stroke-width="2" fill="none" stroke-linecap="round" stroke-linejoin="round" class="text-gray-900"><path d="M6 2L3 6v14a2 2 0 0 0 2 2h14a2 2 0 0 0 2-2V6l-3-4z"></path><line x1="3" y1="6" x2="21" y2="6"></line><path d="M16 10a4 4 0 0 1-8 0"></path></svg>
                                 <span class="cart-badge bg-primary text-white">2</span>
-                            </button>
-                            <a href="#" class="btn bg-primary text-white fw-500 btn-md rounded-2 px-4 ms-2 d-none d-md-flex btn-hover-bg-darken-primary border-0"><span>Register</span></a>
+                            </a>
+                            <a href="register.html" class="btn bg-primary text-white fw-500 btn-md rounded-2 px-4 ms-2 d-none d-md-flex btn-hover-bg-darken-primary border-0"><span>Register</span></a>
                             <button aria-label="menu" class="mobile-menu-trigger btn btn-outline px-0 text-gray-700 d-flex d-lg-none">
                                 <svg viewBox="0 0 24 24" width="24" height="24" stroke="currentColor" stroke-width="2" fill="none" stroke-linecap="round" stroke-linejoin="round" class="text-gray-900"><line x1="3" y1="12" x2="21" y2="12"></line><line x1="3" y1="6" x2="21" y2="6"></line><line x1="3" y1="18" x2="21" y2="18"></line></svg>
                             </button>
@@ -232,11 +240,11 @@
                     </div>
                     <div class="col-12">
                         <div class="d-flex flex-sm-row flex-column gap-sm-3 gap-2 pt-4 justify-content-center">
-                            <a href="#" data-aos="zoom-in" data-aos-duration="400" class="btn bg-primary btn-lg rounded-2 px-4 text-white mb-1 d-flex gap-3 align-items-center justify-content-center btn-hover-bg-darken-primary border-0">
+                            <a href="pricing.html" data-aos="zoom-in" data-aos-duration="400" class="btn bg-primary btn-lg rounded-2 px-4 text-white mb-1 d-flex gap-3 align-items-center justify-content-center btn-hover-bg-darken-primary border-0">
                                 <span>Start trial for 14 days</span>
                                 <svg viewBox="0 0 24 24" width="20" height="20" stroke="currentColor" stroke-width="2" fill="none" stroke-linecap="round" stroke-linejoin="round" class="text-white"><line x1="7" y1="17" x2="17" y2="7"></line><polyline points="7 7 17 7 17 17"></polyline></svg>
                             </a>
-                            <a href="#" data-aos="zoom-in" data-aos-duration="600" class="btn bg-gray-900 btn-lg rounded-2 px-4 text-gray-100 mb-1 btn-hover-bg-dark border-0">
+                            <a href="about.html" data-aos="zoom-in" data-aos-duration="600" class="btn bg-gray-900 btn-lg rounded-2 px-4 text-gray-100 mb-1 btn-hover-bg-dark border-0">
                                 <span>Read more</span>
                             </a>
                         </div>
